network.yml
Description:
    This file was written by Eddie Pease (eddiepease1@gmail.com) and deploys the following network
    VPC / IGW
    2 NAT gateways, along with 2 EIP addresses
    4 Subnets - 2 pub, 2 private
    1 Public Route Table
    2 Private Route Tables

Parameters:
    # whatever you consider a changing value, put it as a parameter instead of hard-coding it into your script
    EnvironmentName:
        Type: String
        Description: Name for the whole project
    VpcCIDR:
        Type: String
        Default: 10.0.0.0/16
        Description: Restrictions for the IP codes generated in the VPC
    PubSubnet1CIDR:
        Type: String
        Default: 10.0.0.0/24
        Description: Restrictions for the IP codes generated for Public Subnet 1
    PubSubnet2CIDR:
        Type: String
        Default: 10.0.1.0/24
        Description: Restrictions for the IP codes generated for Public Subnet 2
    PrivSubnet1CIDR:
        Type: String
        Default: 10.0.2.0/24
        Description: Restrictions for the IP codes generated for Private Subnet 1
    PrivSubnet2CIDR:
        Type: String
        Default: 10.1.3.0/24
        Description: Restrictions for the IP codes generated for Private Subnet 2

Resources:

    VPC:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !Ref VpcCIDR
            EnableDnsHostnames: true
            Tags:
                - Key: Name
                  Value: !Ref EnvironmentName

    IGW:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
                - Key: Name
                  Value: !Ref EnvironmentName

    IGWAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            InternetGatewayId: !Ref IGW
            VpcId: !Ref VPC

    EIP1:
        Type: AWS::EC2::EIP
        DependsOn: IGWAttachment
        Properties:
            Domain: vpc

    NATGateway1:
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt EIP1.AllocationId
            SubnetId: !Ref PubSubnet1
            Tags:
                - Key: Name
                  Value: !Ref EnvironmentName

    EIP2:
        Type: AWS::EC2::EIP
        DependsOn: IGWAttachment
        Properties:
            Domain: vpc

    NATGateway2:
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt EIP2.AllocationId
            SubnetId: !Ref PubSubnet2
            Tags:
                -   Key: Name
                    Value: !Ref EnvironmentName

    PubSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
            AvailabilityZone: !Select [ 0, !GetAZs '' ]
            CidrBlock: !Ref PubSubnet1CIDR
            MapPublicIpOnLaunch: true
            Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Public Subnet (AZ1)
            VpcId: !Ref VPC

    PubSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
            AvailabilityZone: !Select [ 1, !GetAZs '' ]
            CidrBlock: !Ref PubSubnet2CIDR
            MapPublicIpOnLaunch: true
            Tags:
                -   Key: Name
                    Value: !Sub ${EnvironmentName} Public Subnet (AZ2)
            VpcId: !Ref VPC

    PrivSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
            AvailabilityZone: !Select [ 0, !GetAZs '' ]
            CidrBlock: !Ref PrivSubnet1CIDR
            Tags:
                -   Key: Name
                    Value: !Sub ${EnvironmentName} Private Subnet (AZ1)
            VpcId: !Ref VPC

    PrivSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
            AvailabilityZone: !Select [ 1, !GetAZs '' ]
            CidrBlock: !Ref PrivSubnet2CIDR
            Tags:
                -   Key: Name
                    Value: !Sub ${EnvironmentName} Private Subnet (AZ2)
            VpcId: !Ref VPC

    PublicRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Public Route Table
            VpcId: !Ref VPC

    DefaultPublicRoute:
        Type: AWS::EC2::Route
        DependsOn: IGWAttachment
        Properties:
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref IGW
            RouteTableId: !Ref PublicRouteTable

    PublicSubnetRouteAssociation1:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PubSubnet1

    PublicSubnetRouteAssociation2:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PubSubnet2

    PrivateRouteTable1:
        Type: AWS::EC2::RouteTable
        Properties:
            Tags:
                -   Key: Name
                    Value: !Sub ${EnvironmentName} Private Route Table 1
            VpcId: !Ref VPC

    DefaultPrivateRoute1:
        Type: AWS::EC2::Route
        DependsOn: NATGateway1
        Properties:
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NATGateway1
            RouteTableId: !Ref PrivateRouteTable1

    PrivateSubnetRouteAssociation1:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateRouteTable1
            SubnetId: !Ref PrivSubnet1

    PrivateRouteTable2:
        Type: AWS::EC2::RouteTable
        Properties:
            Tags:
                -   Key: Name
                    Value: !Sub ${EnvironmentName} Private Route Table 2
            VpcId: !Ref VPC

    DefaultPrivateRoute2:
        Type: AWS::EC2::Route
        DependsOn: NATGateway2
        Properties:
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NATGateway2
            RouteTableId: !Ref PrivateRouteTable2

    PrivateSubnetRouteAssociation2:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateRouteTable2
            SubnetId: !Ref PrivSubnet2

Outputs:

    VPC:
        Description: Reference for VPC
        Value: !Ref VPC
        Export:
            Name: !Sub ${EnvironmentName}-VPCID

    PubSubnet1:
        Description: Public Subnet for AZ1
        Value: !Ref PubSubnet1
        Export:
            Name: !Sub ${EnvironmentName}-PUB1

    PubSubnet2:
        Description: Public Subnet for AZ2
        Value: !Ref PubSubnet2
        Export:
            Name: !Sub ${EnvironmentName}-PUB2

    PrivSubnet1:
        Description: Private Subnet for AZ1
        Value: !Ref PrivSubnet1
        Export:
            Name: !Sub ${EnvironmentName}-PRIV1

    PrivSubnet2:
        Description: Public Subnet for AZ2
        Value: !Ref PrivSubnet2
        Export:
            Name: !Sub ${EnvironmentName}-PRIV2
